Cambios Inicio and Nosotros

--- a/Views/Nosotros/Index.cshtml
+++ b/Views/Nosotros/Index.cshtml
@@ -6,11 +6,11 @@
     <ul class="tabs">
       <div class="container wow fadeInUp">
         <div class="row">
-          <div class="col-md-12 text-center">
-            <h1>INFORMACIÓN ACERCA DE LA EMPRESA</h1>
+          <div style="text-align: center;">
+            <h1>Información acerca de Inkasign</h1>
           </div>
           <div class="col-md-12 text-center">
-            <a class="portfolio-item" style="background-image: url(images/carrusel3.jpeg); height:450px; width:1300px">
+            <a class="portfolio-item" style="background-image: url(images/carrusel3.jpeg); height:400px; width:900px">
               <div class="details">
                 <span style="font-size: 19px;">Somos una empresa que se dedica a la venta de prendas y accesorios en fibra de alpaca, algodón orgánico y mezclas. Con una servicio personalizado. Y además nuestra de
                 maquinaria ecológica de última generación es respetuosa con el medio ambiente, capaz de producir hasta 120 000 prendas al año.</span>
@@ -20,79 +20,40 @@
         </div>
       </div>
     </ul>
-</section>
-
-
-
-<section id="portfolio">
-    <ul class="tabs">
-      <div class="container wow fadeInUp">
-        <div class="row">
-          <div class="col-md-4">
-            <h2 align="center">Historia:</h2>
-            <a class="portfolio-item" style="background-image: url(images/logo.jpg); height:310; width:400px">
-              <div class="details">
-                <span style="font-size: 19px;"> Inkasign Outlet es una empresa orientada al rubro textil, que se dedica a la elaboración/expotación de prendas de fibra de alpaca, algodón orgánico y mezclas para mujeres y hombres, la cual lleva en el mercado cerca de 15 años trabajando arduamente.</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <h2 align="center">Misión:</h2>
-            <a class="portfolio-item" style="background-image: url(images/carrusel4.jpeg); height:310; width:400px">
-              <div class="details">
-                <span style="font-size: 19px;"> Ofrecer productos de alta calidad incentivando el consumo de textilería peruana, a través de diseños innovadores, creativos, hechos con dedicación y acorde a la accesibilidad del mercado.</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <h2 align="center">Visión:</h2>
-            <a class="portfolio-item" style="background-image: url(images/carrusel2.jpeg);height:310; width:400px">
-              <div class="details">
-                <span style="font-size: 17px;"> Posicionarnos en el mercado como una empresa exitosa y socialmente responsable con gran reconocimiento a nivel nacional gracias a nuestros productos, calidad, precios y servicio, siempre respetando los derechos y el trabajo tanto de nuestros colaboradores como de nuestros clientes, para asi seguir creciendo y poder ofrecer nuestros productos en todo el interior del país.</span>
-              </div>
-            </a>
+</section><br>
+<div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="card" style="border-radius: 20px; padding: 1rem 1rem; height: 420px;">
+          <div class="card-body">
+            <h1 class="card-title">Misión:</h1>
+            <p style="font-size: 19px;"> Ofrecer productos de alta calidad incentivando el consumo de textilería peruana, a través de diseños innovadores, creativos, hechos con dedicación y acorde a la accesibilidad del mercado.</p>
           </div>
         </div>
-      </div>
-    </ul>
-</section>
-
-<div class="row">
-  <div class="col-md-12">
-    <h1>Los principios que nos guían</h1>
-  </div>
-</div>
-
-<section id="portfolio">
-    <ul class="tabs">
-      <div class="container wow fadeInUp">
-        <div class="row">
-          <div class="col-md-4">
-            <h2 align="center">Actuamos</h2>
-            <a class="portfolio-item" style="background-image: url(images/actuamos2.jpg); height:200px">
-              <div class="details">
-                <span style="font-size: 19px;">Sentimos orgullo de lo que hemos creado.</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <h2 align="center">Mejoramos</h2>
-            <a class="portfolio-item" style="background-image: url(images/mejorar.jpg); height:200px">
-              <div class="details">
-                <span style="font-size: 17px;">Impactamos de manera positiva en la sociedad.</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <h2 align="center">Confianza</h2>
-            <a class="portfolio-item" style="background-image: url(images/confianza.jpg); height:200px">
-              <div class="details">
-                <span style="font-size: 19px;">Aprendemos entre nosotros.</span>
-              </div>
-            </a>
+        </div>
+        <div class="col-sm-4">
+         <div class="card" style="border-radius: 20px; padding: 1rem 1rem; height: 420px;">
+          <div class="card-body">
+            <h1 class="card-title">Visión:</h1>
+            <p style="font-size: 17px;"> Posicionarnos en el mercado como una empresa exitosa y socialmente responsable con gran reconocimiento a nivel nacional gracias a nuestros productos, calidad, precios y servicio, siempre respetando los derechos y el trabajo tanto de nuestros colaboradores como de nuestros clientes, para asi seguir creciendo y poder ofrecer nuestros productos en todo el interior del país.</p>
           </div>
         </div>
+       </div>
+       <div class="col-sm-4">
+         <div class="card" style="border-radius: 20px; padding: 1rem 1rem; height: 420px;">
+          <div class="card-body">
+            <h1 class="card-title">Valores:</h1>
+            <p>* Integridad</p>
+            <p>* Respeto</p>
+            <p>* Puntualidad</p>
+          </div>
       </div>
-    </ul>
-</section>
+    </div>
+    <br>
+    <div>
+      <h1 style="text-align:center">Encuentranos en:</h1>
+      <center><p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d947.0347678211185!2d-77.03964803628689!3d-12.107374825180798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8474bfeb945%3A0xd3d571ec663ca674!2sAv.%20Camino%20Real%201801%2C%20Santiago%20de%20Surco%2015063!5e0!3m2!1ses-419!2spe!4v1654614965219!5m2!1ses-419!2spe" width="1000" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p></center>
+    </div>
+
+ 
 
