--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container d-flex align-items-center justify-content-between">
                                 
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/logo.jpg" alt="" height="70"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/logo.jpg" alt="" height="40"></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inkasign Outlet</a>
                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -44,100 +44,25 @@
         </main>
     </div>
 
-
-<!-- Footer -->
-<footer class="bg-dark text-center text-white">
-  <!-- Section: Social media -->
-  <section
-    class="d-flex justify-content-center justify-content-lg-between p-4"
-  >
-    <!-- Left -->
-   
-    <!-- Left -->
-
-    <!-- Right -->
-    
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
-
-  <!-- Section: Links  -->
-  <section class="">
-    <div class="container text-center text-md-start mt-5" >
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Inkasign Outlet
-          </h6>
-          <p>
-            Estamos abiertos de lunes a viernes de: 
-          </p>
-          9 AM - 6 PM
+ <footer class="bg-dark text-center text-white">
+  <div class="container">
+           <p>Horario de Atención: 09:00am-18:00pm</p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <center>
-          <h6 class="text-uppercase fw-bold mb-4">
-            Nos ubicamos en:
-          </h6>
-         <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d947.0347678211185!2d-77.03964803628689!3d-12.107374825180798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8474bfeb945%3A0xd3d571ec663ca674!2sAv.%20Camino%20Real%201801%2C%20Santiago%20de%20Surco%2015063!5e0!3m2!1ses-419!2spe!4v1654614965219!5m2!1ses-419!2spe" width="260" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-        </div>
-        </center>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <center>
-          <h6 class="text-uppercase fw-bold mb-4">
-            Síguenos en nuestras redes sociales:
-          </h6>
+        <div>
+          <h6> Síguenos en nuestras redes sociales:</h6>
           <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/inkasign.outlet" role="button">
           <img src="/images/facebook.png" width="25px" heigh="25px"></i> Facebook</a>
-          <br>
-          <br>
-          <p>
           <a class="btn btn-light" style="background-color: white; color:black;" href="https://www.instagram.com/inkasign.outlet/" role="button">
-         <img src="/images/instagram.png" width="25px" heigh="25px"></i> Instagram</a>
-         </p>
-          </center>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
-          <center>
-          <h6 class="text-uppercase fw-bold mb-4">
-            Contáctanos en nuestro whatsapp:
-          </h6>
+          <img src="/images/instagram.png" width="25px" heigh="25px"></i> Instagram</a>
           <a class="btn btn-success" style="background-color: #00bb2d; color:white;" href="https://wa.link/a3ptex" role="button">
           <img src="/images/whatsapp.png" width="24px" heigh="24px"></i> Whatsapp</a>
-          </center>
         </div>
-        <!-- Grid column -->
-      </div>
-      
-      <!-- Grid row -->
-    </div>
-    
-  </section>
-  <!-- Section: Links  -->
-
-
-<!-- Copyright -->
-<div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2022 INKASIGN OUTLET COPYRIGHT:
-    <a  class="text-reset fw-bold" href="/Home/Privacy">Privacidad</a>
-  </div>
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+          © 2022 INKASIGN OUTLET COPYRIGHT:
+          <a class="text-reset fw-bold" href="/Nosotros/Index">Privacidad</a>
+        </div>
   </footer>
-<!-- Footer -->
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
