--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,25 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 
-
+<br>
+<h5><marquee>Encuentra las mejores prendas al mejor precio en Inkasign Outlet</marquee></h5>
+<br>
 <div class="general_home">
 <div class="text-center">
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" >
   <div class="carousel-inner">
-    <div class="carousel-item active">
-       
-      <img src="/images/carrusel1.jpeg" alt="" width="1300px" height="550px">                         
+    <div class="carousel-item active"> 
+      <img src="/images/carrusel1.jpeg" alt="" width="900px" height="400px">                         
     </div>
     <div class="carousel-item">
-      <img src="/images/carrusel2.jpeg" alt="" width="1300px" height="550px">
+      <img src="/images/carrusel2.jpeg" alt="" width="900px" height="400px">
     </div>
     <div class="carousel-item">
-      <img src="/images/carrusel3.jpeg" alt="" width="1300px" height="550px">
-      
+      <img src="/images/carrusel3.jpeg" alt="" width="900px" height="400px">
     </div>
     <div class="carousel-item">
-      <img src="/images/carrusel4.jpeg" alt="" width="1300px" height="550px">
-      
+      <img src="/images/carrusel4.jpeg" alt="" width="900px" height="400px">  
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -33,7 +32,3 @@
   </button>
 </div>
 </div>
-
-<br>
-<h5><center>Encuentra las mejores prendas al mejor precio en Inkasign Outlet</h5></center>
-<br>
