--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿ @{
     ViewData["Title"] = "Home Page";
 }
-
+<!--<img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
 <br>
-<h5><marquee>Encuentra las mejores prendas al mejor precio en Inkasign Outlet</marquee></h5>
+<h2><marquee> Las mejores prendas al mejor precio en Inkasign Outlet </marquee></h2>
+
 <br>
 <div class="general_home">
 <div class="text-center">
