--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,6 +8,7 @@ html {
   }
 }
 
+
 html {
   position: relative;
   min-height: 100%;
@@ -15,12 +16,12 @@ html {
 
 body {
   margin-bottom: 0px;
-  background-color: MintCream;
+  background-color: rgba(230, 223, 165, 0.76);
 }
  
 
 .general_home{
-  background: MintCream;
+  background: rgba(223, 203, 160, 0.938);
 }
 
 #img1 {
