--- a/Views/Nosotros/Index.cshtml
+++ b/Views/Nosotros/Index.cshtml
@@ -1,6 +1,7 @@
  @{
     ViewData["Title"] = "Nosotros";
 }
+<!--<img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
 
 <section id="portfolio">
     <ul class="tabs">
@@ -10,10 +11,11 @@
             <h1>Información acerca de Inkasign</h1>
           </div>
           <div class="col-md-12 text-center">
-            <a class="portfolio-item" style="background-image: url(images/carrusel3.jpeg); height:400px; width:900px">
-              <div class="details">
-                <span style="font-size: 19px;">Somos una empresa que se dedica a la venta de prendas y accesorios en fibra de alpaca, algodón orgánico y mezclas. Con una servicio personalizado. Y además nuestra de
-                maquinaria ecológica de última generación es respetuosa con el medio ambiente, capaz de producir hasta 120 000 prendas al año.</span>
+            <a class="portfolio-item" style="background-image: url(images/carrusel3.jpeg); align="middle"> 
+              <div class="details" >
+              
+                <span style="font-size: 19px;" >Somos una empresa que se dedica a la venta de prendas y accesorios en fibra de alpaca, algodón orgánico y mezclas. Con una servicio personalizado. Y además nuestra de
+                maquinaria ecológica de última generación es respetuosa con el medio ambiente, capaz de producir hasta 120 000 prendas al año. </span>
               </div>
             </a>
           </div>
@@ -56,4 +58,5 @@
     </div>
 
  
+
 
