--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -1,22 +1,8 @@
 @model IEnumerable<Inkasign.Models.Producto>
 @{
     ViewData["Title"] = "Catálogo Inkasign Outlet";  
-}
-
-     
+}   
 <center><h1>@ViewData["Title"]</h1></center>
-
-<br>
-<br>
-<br>
-<form asp-controller="Catalogo" asp-action="Index" class="container123">
-       <p>
-         <input type="text" name="searchString" class="input">
-         <input type="image" src="/images/lupa.png" id="btn123"/>
-
-       </p>
-</form> 
-<br>
 <br>
   <div class="container" >
     <h1>@ViewData["Message"]</h1>
@@ -35,12 +21,11 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
-                  <p class="card-text">S/. @Html.DisplayFor(modelItem => item.Precio)</p>
-
-
-                  <center><a class="btn btn-light" asp-action="Agregar" asp-route-id="@item.Id" style="background-color: #AB291D; color:white;"><img src="/images/carrito1.png" class="img-fluid" alt="" width="20px" heigh="20px"> Agregar</a>
-
-                  <a class="btn btn-secondary" asp-action="Detalles" asp-route-id="@item.Id">Detalles</a><center/>
+                  <p class="card-text">Precio: S/@Html.DisplayFor(modelItem => item.Precio)</p>
+                  <center>
+                  <a class="btn btn-primary" asp-action="Agregar" asp-route-id="@item.Id" style="background-color: red; color:white;"><img src="/images/carrito1.png" class="img-fluid" alt="" width="20px" heigh="20px"> Añadir</a>
+                  <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.Id" style="background-color: blue; color:white;">Ver más</a>
+                  <center/>
                 </div>
               </div>
             </div>
