log in / out / register

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
 <body class="bodyLIn">
 <div class="create mt-5">
 
-        <form id="formulario" method="post" class="">
+        <form id="formulario" method="post" class="" style="background-color: rgba(223, 203, 160, 0.938)">
             
             <fieldset>
 
