--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,15 +4,14 @@
     ViewData["Title"] = "Registrar";
 }
 
-
-
 <div class="create mt-5" >
 
-        <form class="row" asp-route-returnUrl="@Model.ReturnUrl" method="post" id="formulario">
+        <form class="row" asp-route-returnUrl="@Model.ReturnUrl" method="post" id="formulario" style="background-color: rgba(223, 203, 160, 0.938)";> 
             
             <fieldset>
+            
 
-            <h3 class="text-center" >Crear una nueva cuenta</h3>
+           <h3 class="text-center" >Crear una nueva cuenta</h3>
            
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="col-12 mb-3">
