--- a/Views/Shared/_Administrador.cshtml
+++ b/Views/Shared/_Administrador.cshtml
@@ -3,7 +3,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,21 +10,14 @@
     <title>@ViewData["Title"] - Admin</title>
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="~/css/admin.css">
-
 </head>
-
 <body>
-
     <input type="checkbox" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand" style="background-color: white;">
-           <a asp-controller="Home" asp-action="Index"> <img src="~/images/logo.jpg" height="68" width="60" /> </a>
-        </div>
-       
-       
+           <a asp-controller="Home" asp-action="Index"><img src="~/images/logo.jpg" height="68" width="60" /> </a>
+        </div>     
         <hr>
-      
-
         <!--Secciones-del-tablero-->
         <div class="sidebar-menu">
             <ul>
@@ -33,7 +25,6 @@
                     <a class="nav-link" asp-controller="Admin" asp-action="Panel" class="active"><span class="las la-home"></span>
                     <span>TABLERO</span></a>
                 </li>
-               
                 <li>
                     <a class="nav-link" asp-controller="Producto" asp-action="ElegirAccion"><span class="las la-book-medical"></span>
                     <span>PRODUCTOS</span></a>
@@ -41,20 +32,14 @@
                 <li>
                     <a class="nav-link" asp-controller="Pedido" asp-action="ElegirAccion"><span class="las la-book-medical"></span>
                     <span>PEDIDOS</span></a>
-                </li>
-            
-              </li>
+                </li>          
                 <li>
                     <a class="nav-link" asp-controller="Contacto" asp-action="ListaContacto"><span class="las la-book-medical"></span>
                     <span>CONTACTOS</span></a>
-                </li>
-
-                 
-
+                </li>                
             </ul>
         </div>
     </div>
-
     <div class="main-content">
         <header>
             <h2>
@@ -62,24 +47,15 @@
                     <span class="las la-bars"></span>
                 </label> Tablero
             </h2>
-
             <div class="user-wrapper">
                 <div>
-                    <h4>Administrador</h4>
+                    <h4>Administrad@r</h4>
                     <small>@User.Identity.Name</small>
                 </div>
             </div>
         </header>
-
-   
-
      @RenderBody()
-
      </div>
-
-
      @await RenderSectionAsync("Scripts", required: false)
-
 </body>
-
 </html>
