--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -12,27 +12,24 @@
     var roles = await Task.Run(() => UserManager.GetRolesAsync(myidentity));
 
     @if(roles.Contains("Admin") || roles.Contains("Admin2")){
-
         <li class="nav-item">
-
-            <a class="nav-link color" asp-area="" asp-controller="Admin" asp-action="Panel"> Panel</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Panel">Panel</a>
         </li>
-
-
     }
-
-    
+    <li class="nav-item">
+        <a asp-controller="Proforma" asp-action="Index">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="" class="" viewBox="0 0 16 16">
+              <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
+            </svg>
+        </a>
+    </li>
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity?.Name!</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Cerrar Sesión</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">Salir</button>
         </form>
-    </li>
-    <li class="nav-item">
-
-        <a class="nav-link color" asp-area="" asp-controller="Proforma" asp-action="Index"><img src="/images/CC.png" class="img-fluid" alt="" width="20px" heigh="20px"> Carrito</a>
     </li>
 }
 else
