botones de color

--- a/Views/Producto/Create.cshtml
+++ b/Views/Producto/Create.cshtml
@@ -47,7 +47,8 @@
 </div>
 <br>
 <div>
-    <a asp-action="Index">Volver a la Lista de Productos</a>
+    <button style="background-color:lightsalmon; border-color:lightsalmon; color:white"><a asp-action="Index" type="button" >Volver a la Lista de Productos</a> </button>
+  
 </div>
 
 @section Scripts {
