--- a/Views/Producto/Details.cshtml
+++ b/Views/Producto/Details.cshtml
@@ -27,8 +27,8 @@
 
     <div>
     </center>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar Datos del Producto</a> 
+     <button style="background-color:lightsalmon; border-color:lightsalmon; color:white"><a asp-action="Edit" asp-route-id="@Model?.Id">Editar Datos del Producto</a> </button> <br>
     <br>
-    <a asp-action="Index"> Volver a la Lista de Productos </a>
+     <button style="background-color:lightsalmon; border-color:lightsalmon; color:white"><a asp-action="Index"> Volver a la Lista de Productos </a> </button>
 </div>    
 </div>
