--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -7,7 +7,7 @@
 <center><h1>Lista de Productos</h1></center>
 
 <p>
-    <a asp-action="Create">Registrar Nuevos Productos</a>
+    <button style="background-color:lightsalmon; border-color:lightsalmon; color:white"> <a asp-action="Create">Registrar Nuevos Productos</a> </button>
 </p>
 
 <table class="table">
@@ -58,9 +58,9 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                <button style="background-color:limegreen; border-color:limegreen; color:white"> <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> </button> |
+                <button style="background-color:powderblue; border-color:powderblue; color:white" ><a asp-action="Details" asp-route-id="@item.Id">Detalles</a> </button> |
+                <button style="background-color:tomato; border-color:tomato; color:white"> <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a> </button>
             </td>
         </tr>
 }
