--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
 
     @if(roles.Contains("Admin")){
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Panel">Panel</a>
+            <a class="nav-link text-dark" asp-controller="Admin" asp-action="Panel">Admin</a>
         </li>
     }
     /*<li class="nav-item">
@@ -28,7 +28,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Cerrar Sesion</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">Salir</button>
         </form>
     </li>
 }
