--- a/Views/Producto/Edit.cshtml
+++ b/Views/Producto/Edit.cshtml
@@ -1,12 +1,10 @@
 @model Inkasign.Models.Producto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Datos del Producto Inkasign";
 }
 
-<h1>Editar Datos del Producto Inkasign</h1>
-
-<p>Por medio de esta interfaz, tengo acceso a modificar los datos de mi producto, para luego almacenarlo en el catálogo de Inkasign. </p>
+<h1><center>@ViewData["Title"]</center></h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,8 +27,8 @@
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageName" class="control-label">Ingresar Url de la Imagen</label>
-                <input asp-for="ImageName" class="form-control" />
+                <label asp-for="ImageName" class="control-label">Editar Imagen</label>
+                <input asp-for="ImageName" type="file" class="form-control" />
                 <span asp-validation-for="ImageName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -48,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volver a la Lista de Productos</a>
+    <a class="btn btn-danger"asp-action="Index">Volver a la Lista de Productos</a>
 </div>
 
 @section Scripts {
