--- a/Views/Contacto/ListaContacto.cshtml
+++ b/Views/Contacto/ListaContacto.cshtml
@@ -1,33 +1,30 @@
 @model IEnumerable<Inkasign.Models.Contacto>
 
 @{
-    ViewData["Title"] = "LISTAR";
+    ViewData["Title"] = "Lista de Consultas o Dudas";
 }
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 10px;">
-<h1 >COMENTARIOS</h1>
-
-    </section>
-<br>
-<br>
+<section id="hero" class="d-flex align-items-center justify-content-center" style="height: 10px;">
+<h1>@ViewData["Title"]</h1>
+</section><br>
     <div class="container" >
         <div id="contenedor-tabla" class="table-responsive-md">
             <table class="table table-striped " style="font-size: 18px;">
                 <thead class="thead-dark">
         <tr>
             <th>
-                NOMBRE
+                Nombre
             </th>
             <th>
-                CORREO
+                Correo
             </th>
             <th>
-                ASUNTO
+                Asunto
             </th>
             <th>
-                COMENTARIO
+                Comentario
             </th>
-            <th></th>
+            <th>Opciones</th>
         </tr>
     </thead>
     <tbody>
@@ -46,9 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Comment)
             </td>
             <td>
-
                 <a asp-action="Eliminar" asp-route-id="@item.Id" class="btn btn-danger" style="font-size: 15px;" onclick="return confirm('¿Desea eliminar el mensaje?')">ELIMINAR</a>
-            
             </td>
         </tr>
 }
