--- a/Views/Pedido/BuscarPedidos.cshtml
+++ b/Views/Pedido/BuscarPedidos.cshtml
@@ -8,33 +8,23 @@
     <p>Por medio de esta interfaz, tendré acceso a buscar los pedidos por medio de un filtro, ingresando los datos que requiero obtener.</p>
 
 	<div class="row">
-
-        <form asp-action="ListarPedidos" method="GET">
-
-            <div class="form-group row">
-            <label class="control-label">Ingresar Usuario</label>
-            <input type="text" name="usuario" class="form-control">
-            </div>
-
-            <div class="form-group row">
-            <label class="control-label">Ingresar Precio</label>
-            <label>Desde:</label>
-            <input type="number" name="precioMenor" class="form-control">
-            <label>Hasta:</label>
-            <input type="number" name="precioMayor" class="form-control">
-            </div>
-
-            <div class="form-group row">
-            <label>Ingresar Fecha</label>
-            <label>De:</label>
-            <input type="date" name="fechaInicio" class="form-control">
-            <label>Hasta:</label>
-            <input type="date" name="fechaFin" class="form-control">
-            </div>
-<br>
-            <button class="btn btn-success">Buscar Pedido</button> &nbsp
-            <input type="reset" class="btn btn-danger" value="Limpiar">
-
-        </form>
+        <form  asp-action="ListarPedidos" method="GET" class="row g-3">
+  <div class="col-auto">
+    <label>Usuario:</label>
+    <input type="email" class="form-control" name="usuario" placeholder="example@gmail.com">
+  </div>
+  <div class="col-auto">
+    <label>Fecha Inicio:</label>
+    <input type="date" class="form-control" name="fechaInicio" placeholder="">
+  </div>
+  <div class="col-auto">
+    <label>Fecha Fin:</label>
+    <input type="date" class="form-control" name="fechaFin" placeholder="">
+  </div>
+  <div class="col-auto">
+    <button class="btn btn-outline-danger">Buscar Pago</button>
+    <input type="reset" class="btn btn-danger" value="Limpiar">
+  </div>
+</form>
     </div>
 </div>
