--- a/Views/Producto/Create.cshtml
+++ b/Views/Producto/Create.cshtml
@@ -1,12 +1,10 @@
 @model Inkasign.Models.Producto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Registrar Nuevos Productos";
 }
 
-<h1>Registrar Nuevos Productos</h1>
-
-<h4>Como administrador, tengo acceso a modificar los productos de mi catálogo de prendas Polnice</h4>
+<h1><center>@ViewData["Title"]</center></h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,8 +26,8 @@
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageName" class="control-label">Ingresar Url de la Imagen</label>
-                <input asp-for="ImageName" class="form-control" />
+                <label asp-for="ImageName" class="control-label">Cargar Imagen</label>
+                <input asp-for="ImageName" type="file" class="form-control" />
                 <span asp-validation-for="ImageName" class="text-danger"></span>
             </div>
 
@@ -47,7 +45,7 @@
 </div>
 <br>
 <div>
-    <a asp-action="Index">Volver a la Lista de Productos</a>
+    <a class="btn btn-danger" asp-action="Index">Volver a la Lista de Productos</a>
 </div>
 
 @section Scripts {
