--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -1,41 +1,45 @@
 @model IEnumerable<Inkasign.Models.Producto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Prendas de Inkasign Outlet";
 }
 
-<center><h1>Lista de Productos</h1></center>
-
-<p>
-    <a asp-action="Create">Registrar Nuevos Productos</a>
-</p>
-
+<center><h1>@ViewData["Title"]</h1></center>
+<a class="btn btn-primary" asp-action="Create">Aregar Nuevo Producto</a>
 <table class="table">
     <thead>
         <tr>
-            <th> Nombre del Producto
-                
+             <th>
+                Imagen    
+            </th>
+            <th> 
+                Nombre
             </th>
             <th>
-                Descripción del Producto
+                Descripción
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Precio)
             </th>
             <th>
-                Imagen del Producto
-                @Html.DisplayNameFor(model => model.ImageName)
-                
-            </th>
-            <th>
                Estado
             </th>
-            <th></th>
+            <th>
+                Opciones
+            </th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                <div class="card-body">
+                  <div class="card-img-actions">
+                    <center><img class="img-responsive" width="100" height="100"
+                       src="/images/@item.ImageName" alt="@item.ImageName"  /></center>
+                  </div>
+                </div>   
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -46,21 +50,12 @@
                 S/. @Html.DisplayFor(modelItem => item.Precio)
             </td>
             <td>
-                <div class="card-body">
-                  <div class="card-img-actions">
-                    <center><img class="img-responsive" width="150" height="200"
-                       src="/images/@item.ImageName" alt="@item.ImageName"  /></center>
-                  </div>
-                </div>
-                
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Detalles</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
