--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -12,8 +12,21 @@
     var roles = await Task.Run(() => UserManager.GetRolesAsync(myidentity));
 
     @if(roles.Contains("Admin")){
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Admin" asp-action="Panel">Admin</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Administrar
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li class="nav-item">
+                <a class="nav-link text-dark bi bi-cart" asp-area="" asp-controller="Producto" asp-action="Index">Ver mis productos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark bi bi-cart" asp-area=""asp-controller="Pedido" asp-action="ListarPedidos">Ver Pagos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark bi bi-cart" asp-area="" asp-controller="Contacto" asp-action="ListaContacto">Ver Consultas</a>
+            </li>
+          </ul>
         </li>
     }
     /*<li class="nav-item">
