--- a/Views/Proforma/Edit.cshtml
+++ b/Views/Proforma/Edit.cshtml
@@ -1,14 +1,13 @@
 @model Inkasign.Models.Proforma
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Cantidad del Producto";
 }
 
-<center><h1>Editar Cantidad del Producto</h1>
-
-<h4>Por medio, como cliente tendrás acceso a modificar la cantidad de tus productos del carrito de compras</h4>
-<hr />
-<center>
+<center><h1>@ViewData["Title"]</h1></center><br>
+<div>
+    <a class="btn btn-danger"asp-action="Index">Volver atrás</a>
+</div><br>
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Proforma" asp-action="Edit" id=formulario>
@@ -22,17 +21,12 @@
                 <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar Cambios" class="btn btn-light" style="background-color: #AB291D; color:white;" />
+                <input type="submit" value="Guardar Cambios" class="btn btn-danger" style="color:white;"/>
             </div>
         </form>
     </div>
-</div></center>
-</center>
-
-<div>
-
-    <a asp-action="Index">Volver atrás</a>
 </div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
