--- a/Views/Proforma/Index.cshtml
+++ b/Views/Proforma/Index.cshtml
@@ -7,12 +7,11 @@
         listItemsCarrito = @Model.elementosCarrito;
         Decimal montoTotal = @Model.montoTotal;
 }
-
-<h1><img src="/images/CC.png" class="img-fluid" alt="" width="45px" heigh="45px">     @ViewData["Title"]</h1>
-
-<h2>RESUMEN DE PEDIDO<h2/>
-        <div class="container" >
-        <div id="contenedor-tabla" class="table-responsive-md">
+<center>
+    <h1><img src="/images/CC.png" class="img-fluid" alt="" width="45px" heigh="45px">@ViewData["Title"]</h1>
+</center>
+<div class="container" >
+    <div id="contenedor-tabla" class="table-responsive-md">
 <table class="table table-striped" style="font-size: 18px;">
     <thead class="table table-striped table-dark">
         <tr>
@@ -28,6 +27,9 @@
             <th>
                 PRECIO
             </th>
+            <th>
+                SUB-TOTAL
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -37,7 +39,7 @@
             <td >
                 <div class="card-body">
                   <div class="card-img-actions">
-                    <center><img class="img-responsive" width="150" height="200"
+                    <center><img class="img-responsive" width="80" height="80"
                        src="/images/@item.Producto.ImageName" alt="@item.Producto.ImageName"  /></center>
                   </div>
                 </div>
@@ -52,8 +54,10 @@
                 S/. @Html.DisplayFor(modelItem => item.Precio)                
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id"><img hspace="10" src="/images/editar.png" width="15px" heigh="15px"></a> 
-                
+                @(item.Precio * item.Cantidad)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id"><img hspace="10" src="/images/editar.png" width="15px" heigh="15px"></a>  
                 <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('¿Desea eliminar el ítem del carrito?')"><img src="/images/eliminar.png" width="15px" heigh="15px"></a>
             </td>
         </tr>
