--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,11 +11,9 @@
 <body class="bodyL">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container d-flex align-items-center justify-content-between">
-                                
+            <div class="container d-flex align-items-center justify-content-between">               
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/logo.jpg" alt="" height="50"></a>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inkasign Outlet</a>
-               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contacto" asp-action="Contacto">Contáctanos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="Index">Catálogo</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
