--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Inkasign</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Inkasign.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/INKASIGN-MAIN.styles.css" asp-append-version="true" />
 </head>
 <body class="bodyL">
     <header>
@@ -67,7 +67,7 @@
           <a class="btn btn-success" style="background-color: #00bb2d; color:white;" href="https://wa.link/a3ptex" role="button">
           <img src="/images/whatsapp.png" width="24px" heigh="24px"></i> Whatsapp</a>
         </div>
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <div class="text-center p-4">
           © 2022 INKASIGN OUTLET COPYRIGHT:
           <a class="text-reset fw-bold" href="/Nosotros/Index">Privacidad</a>
         </div>
