--- a/Views/Contacto/ListaContacto.cshtml
+++ b/Views/Contacto/ListaContacto.cshtml
@@ -1,16 +1,13 @@
 @model IEnumerable<Inkasign.Models.Contacto>
-
 @{
     ViewData["Title"] = "Lista de Consultas o Dudas";
 }
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-<section id="hero" class="d-flex align-items-center justify-content-center" style="height: 10px;">
-<h1>@ViewData["Title"]</h1>
-</section><br>
-    <div class="container" >
-        <div id="contenedor-tabla" class="table-responsive-md">
-            <table class="table table-striped " style="font-size: 18px;">
-                <thead class="thead-dark">
+<center><h1>@ViewData["Title"]</h1></center>
+<br>
+    <div class="container">
+    <div id="contenedor-tabla" class="table-responsive-md">
+    <table class="table table-striped " style="font-size: 18px;">
+    <thead class="thead-dark">
         <tr>
             <th>
                 Nombre
@@ -28,7 +25,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -46,8 +43,8 @@
                 <a asp-action="Eliminar" asp-route-id="@item.Id" class="btn btn-danger" style="font-size: 15px;" onclick="return confirm('¿Desea eliminar el mensaje?')">ELIMINAR</a>
             </td>
         </tr>
-}
-       </tbody>
-            </table>
-        </div>
+        }
+    </tbody>
+    </table>
+    </div>
     </div>
