--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,13 +1,8 @@
-html {
-  font-size: 14px;
-}
-
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
 }
-
 
 html {
   position: relative;
@@ -16,7 +11,7 @@ html {
 
 body {
   margin-bottom: 0px;
-  background-color: rgba(230, 223, 165, 0.76);
+  background-color: white;
 }
  
 #img1 {
@@ -29,7 +24,6 @@ body {
   float: right;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400);
 #formulario{
   padding: 60px;
   max-width: 400px;
@@ -153,7 +147,6 @@ textarea {  resize: none;}
 	transition: all .7s ease;
 }
 
-
 #btn123 {
 	position: absolute;
 	right: 0px;
@@ -172,10 +165,99 @@ textarea {  resize: none;}
 	width: 250px;
 }
 
-/*.pago{
-  padding: 60px;
-  max-width: 400px;
-  background-color: #E7E7E7;
-  margin: 0 auto;
-}*/
-
+body{
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+}
+  
+.container{
+  max-width: 1170px;
+  margin:auto;
+}
+  
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+  
+ul{
+  list-style: none;
+}
+  
+footer{
+  background-color: #24262b;
+}
+  
+.footer-col{
+      width: 25%;
+}
+      
+.footer-col h4{
+      font-size: 18px;
+      color: #ffffff;
+      text-transform: capitalize;
+      margin-bottom: 35px;
+      font-weight: 500;
+      position: relative;
+}
+  
+.footer-col h4::before{
+  content: '';
+  position: absolute;
+  left:0;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+  
+.footer-col ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+  
+.footer-col ul li a{
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+  
+.footer-col ul li a:hover{
+  color: #ffffff;
+  padding-left: 8px;
+}
+  
+.footer-col .social-links a{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255,255,255,0.2);
+  margin:0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+  
+.footer-col .social-links a:hover{
+  color: #24262b;
+  background-color: #ffffff;
+}
+  
+@media(max-width: 767px){
+  .footer-col{
+  width: 50%;
+  margin-bottom: 30px;}
+}
+  
+@media(max-width: 574px){
+  .footer-col{
+  width: 100%;
+  }
+}
