--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 <br>
-<h5><center>Encuentra las mejores prendas al mejor precio en Inkasign Outlet</h5></center>
+<h5><center>Encuentra las mejores prendas al mejor precio en Inkasign </h5></center>
 <br>
 
 <h5><center>Prendas Destacadas</h5></center>
