--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -28,12 +28,12 @@
             <li class="nav-item">
                 <a class="nav-link text-dark bi bi-cart" asp-area="" asp-controller="Producto" asp-action="Index">Ver mis productos</a>
             </li>
-           <!-- <li class="nav-item">
+           <li class="nav-item">
                 <a class="nav-link text-dark bi bi-cart" asp-area=""asp-controller="Pedido" asp-action="ListarPedidos">Ver Pagos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark bi bi-cart" asp-area="" asp-controller="Contacto" asp-action="ListaContacto">Ver Consultas</a>
-            </li>-->
+            </li>
           </ul>
         </li>
     }
